# ZeroClaw-Android

./: .gitignore  .gitmodules  README.md  finalconfig.toml  install.sh  newconfig.toml  oldconfig.toml  setup.sh  zeroclaw.sh
boot/: install-boot.sh  termux-boot.sh
ctrader/: .env.example  Cargo.toml  README.md  data.db  iztrade.md  run_tests.sh  test_api.py
ctrader/docs/: AI_AGENT.md  AuditReport.md  README.md  SYSTEM_GUIDE.md  USER_GUIDE.md
ctrader/scripts/: iztrade-setup.sh
ctrader/src/: cli.rs  config.rs  lib.rs  main.rs  state.rs
ctrader/src/agent/: mod.rs  model.rs  prompter.rs
ctrader/src/api/: mod.rs  routes.rs
ctrader/src/ctrader/: client.rs  mod.rs  pool.rs  session.rs
ctrader/src/engine/: core.rs  mod.rs  parser.rs
ctrader/src/models/: account.rs  api_client.rs  bot.rs  mod.rs  order.rs  position.rs  price.rs
ctrader/src/risk/: engine.rs  mod.rs
ctrader/src/storage/: db.rs  mod.rs
ctrader/src/telegram/: bot.rs  keyboards.rs  mod.rs  session.rs
ctrader/tests/: live_sync_test.rs  parser_tests.rs
dashboard/: .credentials.json  server.js
docs/: BATTERY_ADB_SETUP.md  FLOWS_MAU_DOANH_NGHIEP.md  HE_SINH_THAI_DOANH_NGHIEP.md  HUONG_DAN_SU_DUNG.md  HUONG_DAN_TAO_OTA_WORKER.md  MO_HINH_CONG_TY_AI.md  TECHNICAL_MANUAL.md
ota-server/: wrangler.toml
scripts/: 00-deep-clean.sh  01-check-env.sh  01-sys-diagnostics.sh  02-install-deps.sh  03-build-zeroclaw.sh  03-install-binary.sh  04-setup-company.sh  05-setup-tunnel.sh  06-setup-ota.sh  99-uninstall-cleanup.sh  99-verify-final.sh  check-env.sh  install-zeroclaw.sh  setup-company.sh  (+1 more)
(+35 files in other folders)
