[package]
name = "iztrade"
version = "2.0.0"
edition = "2021"
description = "iZFx.Trade – Trading Execution Hub for cTrader"
authors = ["TradeKiem.Com"]

[[bin]]
name = "iztrade"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }

# Telegram Bot
teloxide = { version = "0.12", features = ["macros"] }

# cTrader TCP + WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
regex = "1"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"

# HTTP client (OAuth2 flow)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
once_cell = "1"
rand = "0.10.1"

[profile.release]
opt-level = "z"     # Binary size optimization cho Termux
lto = true
codegen-units = 1
panic = "abort"
strip = true
